schema/testdata/errors/operation_set_expression_unresolvable_rhs.keel
model Profile {
    fields {
        username Text @unique
    }

    actions {
        create createProfile() {
            //expect-error:37:44:E020:'context' not found
            @set(profile.username = context.identity)
        }
    }
}
